--- a/.hound.yml
+++ b/.hound.yml
@@ -274,6 +274,12 @@ Style/MultilineOperationIndentation:
 Style/EmptyLinesAroundBlockBody:
   Enabled: false
 
+Style/StringLiterals:
+  EnforcedStyle: double_quotes
+  SupportedStyles:
+    - single_quotes
+    - double_quotes
+
 Style/UnneededPercentQ:
   Enabled: false
 
