--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -1,5 +1,5 @@
 Style/StringLiterals:
-  EnforcedStyle: single_quotes
+  EnforcedStyle: double_quotes
   SupportedStyles:
     - single_quotes
     - double_quotes
