--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -3,3 +3,19 @@ Style/StringLiterals:
   SupportedStyles:
     - single_quotes
     - double_quotes
+  Enabled: true
+
+Style/MutableConstant:
+  Enabled: false
+
+Metrics/LineLength:
+  Enabled: false
+  Max: 205
+  Exclude:
+    - 'db/schema.rb'
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Documentation:
+  Enabled: false
