--- a/.hound.yml
+++ b/.hound.yml
@@ -125,6 +125,9 @@ Lambda:
 
 LambdaCall:
   Enabled: false
+  
+Lint/AssignmentInCondition:
+  Enabled: false
 
 LineEndConcatenation:
   Enabled: false
