--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adding-react-to-rails",
+  "name": "Cinephile",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
